# campaign_center

./: .gitignore  AGENTS.md  Cargo.toml  campaign_center.code-workspace  compose.yml  diesel.toml  llm.txt
docs/: AGENTS.md  API_CHANGES.md  ARCHITECTURE.md  INFRASTRUCTURE.md  ROADMAP.md
docs/features/: EVENTS.md  ORGANIZATIONS.md
llms/: context_and_guidelines.txt
migrations/2026-02-02-000001_initial_schema/: down.sql  up.sql
migrations/2026-02-06-000001_add_is_staff_to_users/: down.sql  up.sql
tailwind/: scp.tailwind.config.js  web_app.tailwind.config.js
